# MedicApp

./: .gitignore  AMELIORATIONS_UX_SMS.md  ARCHITECTURE.md  ARCHITECTURE_GRANULAR_SIGNATURES.md  AUDIT_YOUSIGN_RGPD.md  BACKEND_GRANULAR_SIGNATURES_SUMMARY.md  CHANGEMENTS_APPLIQUES.md  FAQ_MedScript.docx  IMPLEMENTATION_EMAIL_VERIFICATION.md  LOGIGRAMMES_MEDICAPP.md  MedicApp_Sprints_Finaux.md  PLAN_CONFORMITE_HDS.md  PatientJourneyHeader-v4.jsx  README.md  RECOMMENDATIONS_SMS_NO_REGRESSION.md  REGRESSION_ANALYSIS_SMS.md  SIGNATURES_GRANULAIRES_COMPLETE.md  Sprint_S11_Parcours_Patient.md  TESTS_E2E_MEDICAPP.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  package-lock.json  setup_sprint2.ps1
backend/: .env.example  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  crud.py  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  requirements-dev.txt  requirements.txt  schemas.py  schemas_patient_dashboard.py
backend/.azure/: config
backend/assets/: README.md
backend/core/: __init__.py  config.py  key_vault.py  logging_config.py  password_policy.py  security.py
backend/data/: pharmacies_mssante_sample.json
backend/dependencies/: __init__.py  auth.py
backend/domain/: __init__.py
backend/dossier/: __init__.py  email_verification_service.py  models.py  schemas.py  service.py
backend/jobs/: __init__.py  check_abandoned_journeys.py  check_reflection_period.py
backend/middleware/: audit_logging.py  rate_limiter.py
backend/migrations/: env.py
backend/repositories/: __init__.py  email_verification_repository.py  (+2 more)
docs/: README.md  (+29 more)
(+317 files in other folders)
